# scene/api/scene/v1/scene_grpc.pb.go
@@ -1,0 +1,327 @@
+// Code generated by protoc-gen-go-grpc. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-grpc v1.5.1
+// - protoc             v4.25.8
+// source: api/scene/v1/scene.proto
+
+package v1
+
+import (
+	context "context"
+	grpc "google.golang.org/grpc"
+	codes "google.golang.org/grpc/codes"
+	status "google.golang.org/grpc/status"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the grpc package it is being compiled against.
+// Requires gRPC-Go v1.64.0 or later.
+const _ = grpc.SupportPackageIsVersion9
+
+const (
+	Scene_CreateScene_FullMethodName  = "/scene.v1.Scene/CreateScene"
+	Scene_DeleteScene_FullMethodName  = "/scene.v1.Scene/DeleteScene"
+	Scene_UpdateScene_FullMethodName  = "/scene.v1.Scene/UpdateScene"
+	Scene_SearchScene_FullMethodName  = "/scene.v1.Scene/SearchScene"
+	Scene_ListScenes_FullMethodName   = "/scene.v1.Scene/ListScenes"
+	Scene_GetSceneByID_FullMethodName = "/scene.v1.Scene/GetSceneByID"
+)
+
+// SceneClient is the client API for Scene service.
+//
+// For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
+//
+// SceneService 场景服务定义
+type SceneClient interface {
+	// CreateScene 创建场景
+	CreateScene(ctx context.Context, in *CreateSceneRequest, opts ...grpc.CallOption) (*CreateSceneReply, error)
+	// DeleteScene 删除场景
+	DeleteScene(ctx context.Context, in *DeleteSceneRequest, opts ...grpc.CallOption) (*DeleteSceneReply, error)
+	// UpdateScene 更新场景
+	UpdateScene(ctx context.Context, in *UpdateSceneRequest, opts ...grpc.CallOption) (*UpdateSceneReply, error)
+	// SearchScene 搜索场景
+	SearchScene(ctx context.Context, in *SearchSceneRequest, opts ...grpc.CallOption) (*SearchSceneReply, error)
+	// ListScenes 获取场景列表
+	ListScenes(ctx context.Context, in *ListScenesRequest, opts ...grpc.CallOption) (*ListScenesReply, error)
+	// GetSceneByID 根据ID获取场景
+	GetSceneByID(ctx context.Context, in *GetSceneByIDRequest, opts ...grpc.CallOption) (*GetSceneByIDReply, error)
+}
+
+type sceneClient struct {
+	cc grpc.ClientConnInterface
+}
+
+func NewSceneClient(cc grpc.ClientConnInterface) SceneClient {
+	return &sceneClient{cc}
+}
+
+func (c *sceneClient) CreateScene(ctx context.Context, in *CreateSceneRequest, opts ...grpc.CallOption) (*CreateSceneReply, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(CreateSceneReply)
+	err := c.cc.Invoke(ctx, Scene_CreateScene_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *sceneClient) DeleteScene(ctx context.Context, in *DeleteSceneRequest, opts ...grpc.CallOption) (*DeleteSceneReply, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(DeleteSceneReply)
+	err := c.cc.Invoke(ctx, Scene_DeleteScene_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *sceneClient) UpdateScene(ctx context.Context, in *UpdateSceneRequest, opts ...grpc.CallOption) (*UpdateSceneReply, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(UpdateSceneReply)
+	err := c.cc.Invoke(ctx, Scene_UpdateScene_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *sceneClient) SearchScene(ctx context.Context, in *SearchSceneRequest, opts ...grpc.CallOption) (*SearchSceneReply, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(SearchSceneReply)
+	err := c.cc.Invoke(ctx, Scene_SearchScene_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *sceneClient) ListScenes(ctx context.Context, in *ListScenesRequest, opts ...grpc.CallOption) (*ListScenesReply, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(ListScenesReply)
+	err := c.cc.Invoke(ctx, Scene_ListScenes_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *sceneClient) GetSceneByID(ctx context.Context, in *GetSceneByIDRequest, opts ...grpc.CallOption) (*GetSceneByIDReply, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(GetSceneByIDReply)
+	err := c.cc.Invoke(ctx, Scene_GetSceneByID_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+// SceneServer is the server API for Scene service.
+// All implementations must embed UnimplementedSceneServer
+// for forward compatibility.
+//
+// SceneService 场景服务定义
+type SceneServer interface {
+	// CreateScene 创建场景
+	CreateScene(context.Context, *CreateSceneRequest) (*CreateSceneReply, error)
+	// DeleteScene 删除场景
+	DeleteScene(context.Context, *DeleteSceneRequest) (*DeleteSceneReply, error)
+	// UpdateScene 更新场景
+	UpdateScene(context.Context, *UpdateSceneRequest) (*UpdateSceneReply, error)
+	// SearchScene 搜索场景
+	SearchScene(context.Context, *SearchSceneRequest) (*SearchSceneReply, error)
+	// ListScenes 获取场景列表
+	ListScenes(context.Context, *ListScenesRequest) (*ListScenesReply, error)
+	// GetSceneByID 根据ID获取场景
+	GetSceneByID(context.Context, *GetSceneByIDRequest) (*GetSceneByIDReply, error)
+	mustEmbedUnimplementedSceneServer()
+}
+
+// UnimplementedSceneServer must be embedded to have
+// forward compatible implementations.
+//
+// NOTE: this should be embedded by value instead of pointer to avoid a nil
+// pointer dereference when methods are called.
+type UnimplementedSceneServer struct{}
+
+func (UnimplementedSceneServer) CreateScene(context.Context, *CreateSceneRequest) (*CreateSceneReply, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method CreateScene not implemented")
+}
+func (UnimplementedSceneServer) DeleteScene(context.Context, *DeleteSceneRequest) (*DeleteSceneReply, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method DeleteScene not implemented")
+}
+func (UnimplementedSceneServer) UpdateScene(context.Context, *UpdateSceneRequest) (*UpdateSceneReply, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method UpdateScene not implemented")
+}
+func (UnimplementedSceneServer) SearchScene(context.Context, *SearchSceneRequest) (*SearchSceneReply, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method SearchScene not implemented")
+}
+func (UnimplementedSceneServer) ListScenes(context.Context, *ListScenesRequest) (*ListScenesReply, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method ListScenes not implemented")
+}
+func (UnimplementedSceneServer) GetSceneByID(context.Context, *GetSceneByIDRequest) (*GetSceneByIDReply, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method GetSceneByID not implemented")
+}
+func (UnimplementedSceneServer) mustEmbedUnimplementedSceneServer() {}
+func (UnimplementedSceneServer) testEmbeddedByValue()               {}
+
+// UnsafeSceneServer may be embedded to opt out of forward compatibility for this service.
+// Use of this interface is not recommended, as added methods to SceneServer will
+// result in compilation errors.
+type UnsafeSceneServer interface {
+	mustEmbedUnimplementedSceneServer()
+}
+
+func RegisterSceneServer(s grpc.ServiceRegistrar, srv SceneServer) {
+	// If the following call pancis, it indicates UnimplementedSceneServer was
+	// embedded by pointer and is nil.  This will cause panics if an
+	// unimplemented method is ever invoked, so we test this at initialization
+	// time to prevent it from happening at runtime later due to I/O.
+	if t, ok := srv.(interface{ testEmbeddedByValue() }); ok {
+		t.testEmbeddedByValue()
+	}
+	s.RegisterService(&Scene_ServiceDesc, srv)
+}
+
+func _Scene_CreateScene_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(CreateSceneRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(SceneServer).CreateScene(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: Scene_CreateScene_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(SceneServer).CreateScene(ctx, req.(*CreateSceneRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _Scene_DeleteScene_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(DeleteSceneRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(SceneServer).DeleteScene(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: Scene_DeleteScene_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(SceneServer).DeleteScene(ctx, req.(*DeleteSceneRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _Scene_UpdateScene_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(UpdateSceneRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(SceneServer).UpdateScene(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: Scene_UpdateScene_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(SceneServer).UpdateScene(ctx, req.(*UpdateSceneRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _Scene_SearchScene_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(SearchSceneRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(SceneServer).SearchScene(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: Scene_SearchScene_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(SceneServer).SearchScene(ctx, req.(*SearchSceneRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _Scene_ListScenes_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(ListScenesRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(SceneServer).ListScenes(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: Scene_ListScenes_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(SceneServer).ListScenes(ctx, req.(*ListScenesRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _Scene_GetSceneByID_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(GetSceneByIDRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(SceneServer).GetSceneByID(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: Scene_GetSceneByID_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(SceneServer).GetSceneByID(ctx, req.(*GetSceneByIDRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+// Scene_ServiceDesc is the grpc.ServiceDesc for Scene service.
+// It's only intended for direct use with grpc.RegisterService,
+// and not to be introspected or modified (even as a copy)
+var Scene_ServiceDesc = grpc.ServiceDesc{
+	ServiceName: "scene.v1.Scene",
+	HandlerType: (*SceneServer)(nil),
+	Methods: []grpc.MethodDesc{
+		{
+			MethodName: "CreateScene",
+			Handler:    _Scene_CreateScene_Handler,
+		},
+		{
+			MethodName: "DeleteScene",
+			Handler:    _Scene_DeleteScene_Handler,
+		},
+		{
+			MethodName: "UpdateScene",
+			Handler:    _Scene_UpdateScene_Handler,
+		},
+		{
+			MethodName: "SearchScene",
+			Handler:    _Scene_SearchScene_Handler,
+		},
+		{
+			MethodName: "ListScenes",
+			Handler:    _Scene_ListScenes_Handler,
+		},
+		{
+			MethodName: "GetSceneByID",
+			Handler:    _Scene_GetSceneByID_Handler,
+		},
+	},
+	Streams:  []grpc.StreamDesc{},
+	Metadata: "api/scene/v1/scene.proto",
+}
