# scene/api/scene/v1/scene_http.pb.go
@@ -1,0 +1,273 @@
+// Code generated by protoc-gen-go-http. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-http v2.8.4
+// - protoc             v4.25.8
+// source: api/scene/v1/scene.proto
+
+package v1
+
+import (
+	context "context"
+	http "github.com/go-kratos/kratos/v2/transport/http"
+	binding "github.com/go-kratos/kratos/v2/transport/http/binding"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the kratos package it is being compiled against.
+var _ = new(context.Context)
+var _ = binding.EncodeURL
+
+const _ = http.SupportPackageIsVersion1
+
+const OperationSceneCreateScene = "/scene.v1.Scene/CreateScene"
+const OperationSceneDeleteScene = "/scene.v1.Scene/DeleteScene"
+const OperationSceneGetSceneByID = "/scene.v1.Scene/GetSceneByID"
+const OperationSceneListScenes = "/scene.v1.Scene/ListScenes"
+const OperationSceneSearchScene = "/scene.v1.Scene/SearchScene"
+const OperationSceneUpdateScene = "/scene.v1.Scene/UpdateScene"
+
+type SceneHTTPServer interface {
+	// CreateScene CreateScene 创建场景
+	CreateScene(context.Context, *CreateSceneRequest) (*CreateSceneReply, error)
+	// DeleteScene DeleteScene 删除场景
+	DeleteScene(context.Context, *DeleteSceneRequest) (*DeleteSceneReply, error)
+	// GetSceneByID GetSceneByID 根据ID获取场景
+	GetSceneByID(context.Context, *GetSceneByIDRequest) (*GetSceneByIDReply, error)
+	// ListScenes ListScenes 获取场景列表
+	ListScenes(context.Context, *ListScenesRequest) (*ListScenesReply, error)
+	// SearchScene SearchScene 搜索场景
+	SearchScene(context.Context, *SearchSceneRequest) (*SearchSceneReply, error)
+	// UpdateScene UpdateScene 更新场景
+	UpdateScene(context.Context, *UpdateSceneRequest) (*UpdateSceneReply, error)
+}
+
+func RegisterSceneHTTPServer(s *http.Server, srv SceneHTTPServer) {
+	r := s.Route("/")
+	r.POST("/v1/scene", _Scene_CreateScene0_HTTP_Handler(srv))
+	r.DELETE("/v1/scene/{sid}", _Scene_DeleteScene0_HTTP_Handler(srv))
+	r.PUT("/v1/scene", _Scene_UpdateScene0_HTTP_Handler(srv))
+	r.GET("/v1/scene/search", _Scene_SearchScene0_HTTP_Handler(srv))
+	r.GET("/v1/scene", _Scene_ListScenes0_HTTP_Handler(srv))
+	r.GET("/v1/scene/{sid}", _Scene_GetSceneByID0_HTTP_Handler(srv))
+}
+
+func _Scene_CreateScene0_HTTP_Handler(srv SceneHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in CreateSceneRequest
+		if err := ctx.Bind(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationSceneCreateScene)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.CreateScene(ctx, req.(*CreateSceneRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*CreateSceneReply)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _Scene_DeleteScene0_HTTP_Handler(srv SceneHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in DeleteSceneRequest
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindVars(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationSceneDeleteScene)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.DeleteScene(ctx, req.(*DeleteSceneRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*DeleteSceneReply)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _Scene_UpdateScene0_HTTP_Handler(srv SceneHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in UpdateSceneRequest
+		if err := ctx.Bind(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationSceneUpdateScene)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.UpdateScene(ctx, req.(*UpdateSceneRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*UpdateSceneReply)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _Scene_SearchScene0_HTTP_Handler(srv SceneHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in SearchSceneRequest
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationSceneSearchScene)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.SearchScene(ctx, req.(*SearchSceneRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*SearchSceneReply)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _Scene_ListScenes0_HTTP_Handler(srv SceneHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in ListScenesRequest
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationSceneListScenes)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.ListScenes(ctx, req.(*ListScenesRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*ListScenesReply)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _Scene_GetSceneByID0_HTTP_Handler(srv SceneHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in GetSceneByIDRequest
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindVars(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationSceneGetSceneByID)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.GetSceneByID(ctx, req.(*GetSceneByIDRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*GetSceneByIDReply)
+		return ctx.Result(200, reply)
+	}
+}
+
+type SceneHTTPClient interface {
+	CreateScene(ctx context.Context, req *CreateSceneRequest, opts ...http.CallOption) (rsp *CreateSceneReply, err error)
+	DeleteScene(ctx context.Context, req *DeleteSceneRequest, opts ...http.CallOption) (rsp *DeleteSceneReply, err error)
+	GetSceneByID(ctx context.Context, req *GetSceneByIDRequest, opts ...http.CallOption) (rsp *GetSceneByIDReply, err error)
+	ListScenes(ctx context.Context, req *ListScenesRequest, opts ...http.CallOption) (rsp *ListScenesReply, err error)
+	SearchScene(ctx context.Context, req *SearchSceneRequest, opts ...http.CallOption) (rsp *SearchSceneReply, err error)
+	UpdateScene(ctx context.Context, req *UpdateSceneRequest, opts ...http.CallOption) (rsp *UpdateSceneReply, err error)
+}
+
+type SceneHTTPClientImpl struct {
+	cc *http.Client
+}
+
+func NewSceneHTTPClient(client *http.Client) SceneHTTPClient {
+	return &SceneHTTPClientImpl{client}
+}
+
+func (c *SceneHTTPClientImpl) CreateScene(ctx context.Context, in *CreateSceneRequest, opts ...http.CallOption) (*CreateSceneReply, error) {
+	var out CreateSceneReply
+	pattern := "/v1/scene"
+	path := binding.EncodeURL(pattern, in, false)
+	opts = append(opts, http.Operation(OperationSceneCreateScene))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "POST", path, in, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+func (c *SceneHTTPClientImpl) DeleteScene(ctx context.Context, in *DeleteSceneRequest, opts ...http.CallOption) (*DeleteSceneReply, error) {
+	var out DeleteSceneReply
+	pattern := "/v1/scene/{sid}"
+	path := binding.EncodeURL(pattern, in, true)
+	opts = append(opts, http.Operation(OperationSceneDeleteScene))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "DELETE", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+func (c *SceneHTTPClientImpl) GetSceneByID(ctx context.Context, in *GetSceneByIDRequest, opts ...http.CallOption) (*GetSceneByIDReply, error) {
+	var out GetSceneByIDReply
+	pattern := "/v1/scene/{sid}"
+	path := binding.EncodeURL(pattern, in, true)
+	opts = append(opts, http.Operation(OperationSceneGetSceneByID))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+func (c *SceneHTTPClientImpl) ListScenes(ctx context.Context, in *ListScenesRequest, opts ...http.CallOption) (*ListScenesReply, error) {
+	var out ListScenesReply
+	pattern := "/v1/scene"
+	path := binding.EncodeURL(pattern, in, true)
+	opts = append(opts, http.Operation(OperationSceneListScenes))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+func (c *SceneHTTPClientImpl) SearchScene(ctx context.Context, in *SearchSceneRequest, opts ...http.CallOption) (*SearchSceneReply, error) {
+	var out SearchSceneReply
+	pattern := "/v1/scene/search"
+	path := binding.EncodeURL(pattern, in, true)
+	opts = append(opts, http.Operation(OperationSceneSearchScene))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+func (c *SceneHTTPClientImpl) UpdateScene(ctx context.Context, in *UpdateSceneRequest, opts ...http.CallOption) (*UpdateSceneReply, error) {
+	var out UpdateSceneReply
+	pattern := "/v1/scene"
+	path := binding.EncodeURL(pattern, in, false)
+	opts = append(opts, http.Operation(OperationSceneUpdateScene))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "PUT", path, in, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
